@@ -6,8 +6,6 @@ import java.io.InputStream;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 import org.junit.jupiter.api.Assertions;
@@ -25,8 +23,7 @@ public final class TestUtils {
 
     public static final String RESOURCE_DUMP = "testing_dump.sql";
     public static final String RESOURCE_MS_DUMP = "testing_ms_dump.sql";
-    public static final List<String> IGNORED_SCHEMAS_LIST = Collections.unmodifiableList(Arrays.asList(
-            "worker", "country", "ignore1", "ignore4vrw"));
+    public static final List<String> IGNORED_SCHEMAS_LIST = List.of("worker", "country", "ignore1", "ignore4vrw");
 
     public static PgDatabase loadTestDump(String resource, Class<?> c, PgDiffArguments args)
             throws IOException, InterruptedException {
@@ -92,14 +89,14 @@ public final class TestUtils {
         }
     }
 
-    private TestUtils() {
-    }
-
     public static void createIgnoredSchemaFile(Path dir) throws IOException {
         String rule = "SHOW ALL \n"
                 + "HIDE NONE country \n"
                 + "HIDE NONE worker  \n"
                 + "HIDE REGEX 'ignore.*' ";
         Files.write(dir.resolve(".pgcodekeeperignoreschema"), rule.getBytes(StandardCharsets.UTF_8));
+    }
+
+    private TestUtils() {
     }
 }
